{
    "name": "MenuInput",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "0aed571d-02f0-4706-8d43-de19f835a2ab",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "42f8f6b7-4d06-4561-b363-d51976d56f08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "BackB",
                    "type": "Button",
                    "id": "9c7000a3-8fe3-4724-b139-7a35a04cc150",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "16f31004-8aba-4087-9e18-3f522578f0ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "6396fda3-0612-4083-9aae-a8e057b4f135",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Cursor",
                    "type": "Value",
                    "id": "ed5d6356-e2e2-4d84-9b97-b9ceff5aa2b7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseSelect",
                    "type": "Button",
                    "id": "b5a249c1-a7bf-492e-8435-3caddca40aca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "133bb6c3-e43e-435f-ac57-930f30599a4e",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08da1485-2b74-46d4-90fe-af89a90fab23",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e5f07ae-c2ac-411e-bdc2-e87b3ffd0f0d",
                    "path": "<HID::ZEROPLUS P4 Wired Gamepad>/button2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cee3014-c592-4572-9aff-5e1c7a7aaa5a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2847a3e6-9462-49d8-9203-c601848d14c7",
                    "path": "<Keyboard>/backspace",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "BackB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72cad36b-8f5f-4a3b-89a5-6e1e78b9f21e",
                    "path": "<HID::ZEROPLUS P4 Wired Gamepad>/button3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "BackB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f511c02a-eca7-44f1-bf02-ca61d2b49c3f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d607fcb9-6e83-4c7e-a4a1-5fd5ba31dd0f",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Joystick",
                    "id": "e35955cb-2ed2-4081-a7d4-1d3a4f535317",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "12c6b0cc-85e5-45e1-8b8a-73945590b30d",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bb81b38a-29da-479c-b866-06ec6b730e2b",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboardpress",
                    "id": "f96fa434-c85b-4dd7-8c7e-f03a6dbaa47b",
                    "path": "1DAxis",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f17bd168-a207-46ba-81f1-99344727be4a",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "411c9d37-d8ce-46a9-ba5c-8546bc6c4550",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD",
                    "id": "b284c3df-55dc-47c0-8072-f187480dfe8c",
                    "path": "1DAxis",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "884ac665-e597-4299-9046-f7b4bf4f5d28",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "adb67cae-8e88-45b6-b7a0-e41f42f0b243",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "10d12682-faca-4c45-b796-71503474bbda",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f1b5bc07-1f52-4b9a-8e72-0ab2680eaed8",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1208e74e-3019-4a45-828f-890af2ed33ea",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2419cc05-2b37-4ba1-8087-a3a8690f26fd",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24fae5b4-1bb5-49d4-82af-03be46d455ee",
                    "path": "<HID::ZEROPLUS P4 Wired Gamepad>/button10",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2c941b1-ffc2-4d2a-8395-622360ef69e7",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a92b865-eb71-4c56-a0d4-37319d5e2e50",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MouseSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseInput",
            "id": "9c314b70-1765-4e64-9550-518dca5f2853",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "2c8df1d4-322b-43f3-a107-9930c7c5e63a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "select",
                    "type": "Button",
                    "id": "6488f2ac-74ab-4824-ac2b-87175d0d74bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Resume",
                    "type": "Button",
                    "id": "518a9dc6-941b-48df-8d28-26a28d855936",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd13d512-2dce-4290-8d95-2bc2cb6bc524",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "464c2543-71ac-4ec7-bd31-c6436085bcd8",
                    "path": "<HID::ZEROPLUS P4 Wired Gamepad>/button10",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a42d1870-af99-4be3-ad27-7f5f36c07c48",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fe69dd8-1ebe-4bbe-99c5-a4d053914672",
                    "path": "<HID::ZEROPLUS P4 Wired Gamepad>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "507d0241-bf56-4d66-a133-6341c4c32ec9",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Resume",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0e10d21-58ca-4132-928e-aba887d005c3",
                    "path": "<HID::ZEROPLUS P4 Wired Gamepad>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Resume",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InventoryInput",
            "id": "5c4a2fb1-609e-4974-a7cc-c12e85a388e0",
            "actions": [
                {
                    "name": "Cycle",
                    "type": "Value",
                    "id": "8ad2b737-aae0-4078-aa20-218c8ead38c9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "CycleLeft",
                    "type": "Button",
                    "id": "66a3fa58-42d2-4603-b8cc-f41b4bd92a37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "SelectItem",
                    "type": "Button",
                    "id": "fbae43ca-54ac-452a-9912-7f3b387d65a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "CycleRight",
                    "type": "Button",
                    "id": "1e97dacf-9b7b-4fd0-bbf9-ff467e7b0de2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "CycleItemMK",
                    "id": "b7163820-43dd-4eeb-b7f2-aef29e812d44",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cycle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a601795e-f51f-4484-9c90-3b9d895c9b8a",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cycle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f0af6bc7-a844-44a8-990b-1e8b83afe376",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cycle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5a93e17d-e328-4e42-9721-c4f1b91d60ae",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de8bee06-3425-432a-8e27-c113d6df844d",
                    "path": "<HID::ZEROPLUS P4 Wired Gamepad>/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48e7c5bf-93bb-4620-a9c0-085f021ba4c5",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cda240fa-b476-4991-9a92-b06a02e0a65c",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94840888-3ce2-4836-93c6-9e14f9e7b7ee",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e5be3dc-fb1b-4284-bdd7-ad096726d7cf",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6833cb3c-352c-4ee1-8ed4-27df0d307670",
                    "path": "<HID::ZEROPLUS P4 Wired Gamepad>/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ac128aa-30f2-4482-9b0c-4f2a8f468f6e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerDMG",
            "id": "c12fc9d1-0d16-41e3-876f-75c76e660a94",
            "actions": [
                {
                    "name": "Action",
                    "type": "Button",
                    "id": "50335d24-435d-41ce-9b9b-4d8b46993df1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Action2",
                    "type": "Button",
                    "id": "0c9377da-05d1-498b-a95e-11bfa4bc79b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Action3",
                    "type": "Button",
                    "id": "ed5843d5-a5b1-4562-b496-990297782704",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c64b4cb7-6fbd-4408-8fc6-e372c48b99ca",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0a86463-433e-47ab-8f74-c2b3f002549d",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5643acce-c5a7-44e9-9fd4-46319cec2a6d",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}